--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,29 @@
-/***TABLE OF CONTENTS
+/***TABLE OF CONTENTS***
 
-HEADER - Site name 
-
+--GLOBAL CHANGES--
+--HEADER--
+--MAIN--&&--CARDS--
+--ASIDE--
+--FOOTER--
 
 ***/
 
-
+/*--GLOBAL CHANGES*/
 * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-body {
-    background-color: #d9dcd6;
+a { /*links*/
+    color: #ffffff;
+    text-decoration: none;
+}
+p { /*paragraphs*/
+    font-size: 16px;
 }
 
 /** HEADER **/
-
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -41,6 +47,7 @@ header div {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
+
 /*Truncated the " div ul " and "div ul li" class. Was Redundant*/
 header div ul li {
     list-style-type: none;
@@ -48,19 +55,7 @@ header div ul li {
     margin-left: 25px;
 }
 
-
-
-
-/*ATTRIBUTES FOR ALL HREF LINKS*/
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-/*ATTRIBUTES TO ALL PARAGRAPHS*/
-p {
-    font-size: 16px;
-}
-
+/*Maybe convert this to markup*/
 .header-photo {
     height: 800px;
     width: 100%;
@@ -70,147 +65,69 @@ p {
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
-}
-
-.float-right {
-    float: right;
-    margin-left: 25px;
-}
-
-section {
+/*--MAIN--*/
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/*--CARDS--*/
+.card {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.card img {
+    max-height: 200px;
+}
+
+.card h2{
+    font-size: 36px;
+}
+
+/*Used to arrange the card images left and right*/
+.card-left {
+    float: left;
+    margin-right: 25px;
+}
+
+.card-right {
+    float: right;
+    margin-left: 25px;
+}
+
+/*--ASIDE--*/
 aside {
-    margin-right: 20px;
+    margin-right: 20px;  
+    margin-bottom: 32px;
+    color: #ffffff;
     padding: 20px;
     clear: both;
     float: right;
     width: 20%;
     height: 100%;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Gill Sans', 'Gill Sans MT', 'Calibri', 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
 
 
-/*************These Need to be fixed***********************/
-.benefit-lead {
-    margin-bottom: 32px;
-    color: #ffffff;
+aside h3{
+    margin-bottom:10px;
+    text-align:center;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+aside img{
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-/***********************************************/
-
-
-
-/*The Following three things should be combined? */
-/***************************/
-.search-engine-optimization {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-/***************************/
-
-
-/*****I believe these can be combined***********/
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-/***********************************/
-
-/**FOOTER**/
+/*--FOOTER--*/
 footer {
     padding: 30px;
     clear: both;
